# exam

./: .dockerignore  .gitignore  Dockerfile  README.md  TAURI_GUIDE.md  eslint.config.ts  index.html  package-lock.json  package.json  reasonix.toml  vite.config.ts
.claude/: settings.local.json
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
docker/: nginx.conf
public/: java-important.json  java.json  sjjg.json  sjkxtylyyy.json
public/config/: docx-convert-config.sample.json  version.sample.json
scripts/: convert-docx.mjs  fill-answers.mjs  generate-icons.cjs  parse_db.cjs
src/: App.vue  env.d.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnswerCard.vue  CompoundQuestion.vue  ExamReview.vue  QuestionDisplay.vue  QuizToolbar.vue  ResultDisplay.vue  StartScreen.vue  ToastContainer.vue  WrongNotebookManager.vue
src/composables/: useDarkMode.ts  useQuiz.ts  useToast.ts  useVersion.ts
src/stores/: quizStore.ts
src/utils/: markdown.ts
