[package]
name = "aaa"
version = "0.1.0"
description = "刷题助手 - A quiz practice application"
authors = ["developer"]
edition = "2021"

[lib]
name = "aaa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
